Added favicon + description + preview.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/x-icon" href="/weather.png" />
+    <meta property="og:image" content="/preview.png">
+    <meta property="og:description" content="MyWeatherCast is your weather app wherever you go, just search the location you need and get your forecast instantly.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MyWeatherCast</title>
   </head>
